--- a/40-3d-boxes-background/style.css
+++ b/40-3d-boxes-background/style.css
@@ -19,7 +19,7 @@ body {
 .magic {
   background-color: #f9ca24;
   color: #fff;
-  font-family: 'Poppins', sans-serif;
+  font-family: Poppins, sans-serif;
   border: 0;
   border-radius: 3px;
   font-size: 16px;
